[package]
name = "lua-in-rust"
version = "0.1.0"
authors = ["Alexander Shabalin <shabalyn.a@gmail.com>"]
edition = "2018"

[dependencies]
encoding_rs = "0.8.20"
encoding_rs_io = "0.1.6"
rs_tracing = { version = "1.0.1", features = ["rs_tracing"] }
clap = "2.33.0"

[dev-dependencies]
difference = "2.0.0"

[profile.test]
opt-level = 3
